--- a/views/register.ejs
+++ b/views/register.ejs
@@ -7,14 +7,17 @@
             <div class="mb-3">
                 <label for="username" class="form-label">Username</label>
                 <input type="text" class="form-control" name="username" id="username" required>
+                <div class="username error text-danger"></div>
             </div>
             <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
                 <input type="email" class="form-control" name="email" id="email" required>
+                <div class="email error text-danger"></div>
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
                 <input type="password" class="form-control" name="password" id="password" required>
+                <div class="password error text-danger"></div>
             </div>
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
@@ -22,6 +25,9 @@
     </div>
     <script>
         const register_form = document.getElementById("register_form");
+        const usernameError = document.querySelector(".username.error");
+        const emailError = document.querySelector(".email.error")
+        const passwordError = document.querySelector(".password.error")
         register_form.addEventListener("submit", async (e) => {
             e.preventDefault();
             let username = document.getElementById("username").value;
@@ -38,9 +44,18 @@
                 });
                 if (res.status == 201) {
                     location.assign("/");
-                    return;
                 }
-                console.log(JSON.parse(res.body));
+                else {
+                    let data = await res.json();
+                    if (data.errors) {
+                        console.log(data.errors)
+                        let errors = data.errors;
+                        usernameError.textContent = errors.username ? errors.username : "";
+                        emailError.textContent = errors.email ? errors.email : ""
+                        passwordError.textContent = errors.password ? errors.password : ""
+                    }
+                }
+
             }
             catch (err) {
                 console.log("We fucked up");
