--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header') %>
 
-    <div class="container">
+    <div class="container-fluid form-container">
 
         <form id="login_form">
             <h2>Sign In</h2>
@@ -15,7 +15,10 @@
                 <input type="password" class="form-control" name="password" id="password" required>
                 <div class="password error text-danger"></div>
             </div>
-            <button type="submit" class="btn btn-primary">Sign In</button>
+            <div class="mb3">
+                <button type="submit" class="btn btn-primary">Sign In</button>
+                <span class="float-end tip">Don't have an account? <a href="/register">Register</a></span>
+            </div>
         </form>
 
     </div>
