--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,6 +16,9 @@
         crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="/static/register.css">
+    <script>
+        var pt = '<%= page_title %>'
+    </script>
 </head>
 
 <body>
