--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -8,10 +8,11 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link <%- (page_title=== 'Home')?'active':'' %>" aria-current="page" href="/">Home
+                    </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Products</a>
+                    <a class="nav-link <%- (page_title==='Products' )?'active':'' %>" href="/products">Products</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -28,10 +29,14 @@
                     </ul>
                 </li>
             </ul>
-            <form class="d-flex">
+            <!-- <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+            </form> -->
+            <% if (!locals.user) { %>
+                <a id="login-btn" class="btn btn-outline-success" href="/login" role="button">Sign In</a>
+
+                <% } %>
         </div>
     </div>
 </nav>
