prettified home page

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,6 @@
 <footer>
-    Copyright&COPY; 2024 at test.com
+    <p>Contact Us: Email, Phone, Social Media</p>
+    <p>Copyrights &copy; Side7.co.ltd</p>
 </footer>
 </body>
 
