--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header'); %>
+<%- include('partials/header', {css_files: ['static/home.css']}); %>
     <%- include('partials/nav') %>
         <div class="sections">
             <div class="section hero">
