--- a/views/products.ejs
+++ b/views/products.ejs
@@ -1,8 +1,46 @@
-<%- include('partials/header') %>
+<%- include('partials/header', {css_files:["static/products.css"]}) %>
 
     <%- include('partials/nav') %>
 
         <div class="container">
-            <h3>Products</h3>
+            <% if (locals.products) { %>
+                <%- include('partials/selection-section', {selection: products}) %>
+                    <% } else { %>
+                        <h2 class="info-sorry">
+                            Sorry, we currently don't have any products available right now.
+                        </h2>
+                        <p class="contact">
+                            If you have any inquiry, please contact our <a>customer support.</a>
+                        </p>
+                        <% } %>
+
 
         </div>
+
+        <script>
+            const search_bar = document.getElementById("search_bar");
+            var ress = null;
+            search_bar.addEventListener("submit", async (e) => {
+                e.preventDefault();
+                let keyword = encodeURIComponent(search_bar.keyword.value);
+                if (keyword === "") {
+                    return;
+                }
+                try {
+                    let response = await fetch(`/find-products?keyword=${keyword}`, {
+                        method: "GET",
+                        headers: {
+                            "Content-Type": "application/json"
+                        }
+                    })
+                    ress = response;
+                    if (response.status === 200) {
+                        console.log(response)
+
+                    }
+                } catch (err) {
+                    console.log(err)
+                }
+
+            })
+        </script>
