--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,8 +1,8 @@
-<%- include('partials/header') %>
+<%- include('../partials/header', {css_files:["static/auth/auth.css"]}) %>
 
-    <div class="container-fluid form-container">
+    <div class="form-container ">
 
-        <form id="login_form">
+        <form id="login-form">
             <h2>Sign In</h2>
 
             <div class="mb-3">
@@ -17,13 +17,13 @@
             </div>
             <div class="mb3">
                 <button type="submit" class="btn btn-primary">Sign In</button>
-                <span class="float-end tip">Don't have an account? <a href="/register">Register</a></span>
+                <span class="float-end tip">Don't have an account?<a href="/register">Register</a></span>
             </div>
         </form>
 
     </div>
     <script>
-        const register_form = document.getElementById("login_form");
+        const register_form = document.getElementById("login-form");
         const emailError = document.querySelector(".email.error")
         const passwordError = document.querySelector(".password.error")
         register_form.addEventListener("submit", async (e) => {
@@ -60,4 +60,4 @@
         })
     </script>
 
-    <%- include('partials/footer') %>
+    <%- include('../partials/footer') %>
