--- a/views/partials/product-card.ejs
+++ b/views/partials/product-card.ejs
@@ -2,7 +2,7 @@
     <img src="<%= product.img %>" class="card-img-top" alt="...">
     <div class="card-body">
         <h5 class="card-title">
-            <%= product.title %>
+            <%= product.name%>
         </h5>
         <div class="product-description">
             <p class="card-text">
