--- a/views/products.ejs
+++ b/views/products.ejs
@@ -13,9 +13,10 @@
                             If you have any inquiry, please contact our <a>customer support.</a>
                         </p>
                         <% } %>
-
-
         </div>
+
+
+
 
         <script>
             const search_bar = document.getElementById("search_bar");
@@ -46,3 +47,5 @@
 
             })
         </script>
+
+        <%- include('partials/footer') %>
