Too many forgot lol

--- a/views/partials/product-card.ejs
+++ b/views/partials/product-card.ejs
@@ -9,9 +9,9 @@
                 <%= product.description %>
             </p>
             <div class="product-info-btns">
-                <button type="button" class="btn btn-sm btn-outline-primary">
+                <a class="btn btn-sm btn-outline-primary" href="/products/<%= product.id %>/details">
                     View
-                </button>
+                </a>
 
             </div>
         </div>
