--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -34,29 +34,39 @@
                 <button class="btn btn-outline-success" type="submit">Search</button>
             </form> -->
             <% if (page_title==="Products" ) { %>
-                <form class="d-flex" id="search_bar">
-                    <div class="input-group">
-                        <input class="form-control" name="keyword" type="search" placeholder="Search"
-                            aria-label="Search">
-                        <button class="btn btn-sm btn-outline-primary" type="submit">Search</button>
-                    </div>
+            <form class="d-flex" id="search_bar">
+                <div class="input-group">
+                    <input class="form-control" name="keyword" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-sm btn-outline-primary" type="submit">Search</button>
+                </div>
 
 
-                </form>
+            </form>
 
-                <% } %>
-                    <% if (!locals.user) { %>
-                        <a id="login-btn" class="btn btn-outline-success" href="/login" role="button">Sign In</a>
+            <% } %>
+            <% if (!locals.user) { %>
+            <a id="login-btn" class="btn btn-outline-success" href="/login" role="button">Sign In</a>
 
-                        <% } else { %>
+            <% } else { %>
 
-                            <% if (user.role==="admin" ) { %>
+            <% if (user.role==="admin" ) { %>
 
-                                <%- include('add-product-modal') %>
-                                    <% } %>
-
-                                        Hi, <%= user.username %>
-                                            <% } %>
+            <%- include('add-product-modal') %>
+            <% } %>
+            <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="/logout" id="navbarProfileDropdown" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        Hi, <%= user.username %>
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li>
+                            <a name="" id="" class="dropdown-item" href="/logout" role="button">Logout</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+            <% } %>
 
         </div>
     </div>
